[project]
name = "muziqa"
version = "1.0.22"
description = "App for various music-file-collection analyses (for example, chart of most popular artists in your MP3 collection) and AI playlist generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "matplotlib>=3.10.8",
    "mutagen>=1.47.0",
    "pydub>=0.25.1",
]

[project.scripts]
muziqa = "muziqa:main"

[dependency-groups]
dev = [
    "twine>=6.2.0",
]
